# wifi_classifier

./: .gitignore  CMakeLists.txt  README.md
include/: GlobalSource.hpp  MainUtils.hpp  interlayer.hpp
libs/frameslib/: CMakeLists.txt
libs/frameslib/include/: classifier.hpp  features.hpp  frame.hpp  graph.hpp  object.hpp  optional.hpp  packet.hpp  statistics.hpp  syncworker.hpp  thread_pool.hpp  utils.hpp  worker.hpp
libs/frameslib/src/: classifier.cpp  features.cpp  frame.cpp  graph.cpp  object.cpp  packet.cpp  statistics.cpp  syncworker.cpp  thread_pool.cpp  utils.cpp  worker.cpp
libs/mllib/: CMakeLists.txt
libs/mllib/include/: cross_validation.hpp  data.hpp  estimator.hpp  matrix.hpp  metrics.hpp  model_checking.hpp  neighbour.hpp  probability.hpp  random_forest.hpp  thread_pool.hpp  utils.hpp
libs/mllib/src/: cross_validation.cpp  data.cpp  metrics.cpp  model_checking.cpp  neighbour.cpp  probability.cpp  random_forest.cpp  thread_pool.cpp  utils.cpp
src/: GlobalSource.cpp  MainUtils.cpp  interlayer.cpp
